--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "private": true,
   "main": "dist/index.js",
   "dependencies": {
-    "@material-ui/core": "4.3.2",
+    "@material-ui/core": "^4.9.7",
     "@material-ui/icons": "4.2.1",
+    "@material-ui/system": "^4.9.6",
     "classnames": "2.2.6",
     "devicon-react-svg": "^0.2.2",
     "history": "4.9.0",
