--- a/package.json
+++ b/package.json
@@ -20,12 +20,12 @@
     "react-dom": "16.9.0",
     "react-emotion": "^10.0.0",
     "react-router-dom": "5.0.1",
-    "react-scripts": "3.1.0",
+    "react-scripts": "^3.4.0",
     "react-slick": "0.25.2",
     "react-swipeable-views": "0.13.3"
   },
   "devDependencies": {
-    "@babel/cli": "7.5.5",
+    "@babel/cli": "^7.8.4",
     "@babel/plugin-proposal-class-properties": "7.5.5",
     "@babel/preset-env": "7.5.5",
     "@babel/preset-react": "7.0.0",
