--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
   "main": "dist/index.js",
   "dependencies": {
     "@material-ui/core": "^4.9.7",
-    "@material-ui/icons": "4.2.1",
+    "@material-ui/icons": "^4.9.1",
     "@material-ui/system": "^4.9.6",
+    "babel-loader": "^8.1.0",
     "classnames": "2.2.6",
     "devicon-react-svg": "^0.2.2",
     "history": "4.9.0",
